internal/firewall/testdata/hub_ipv6.nft.golden
# Managed by deyroute. Do not edit: this table is replaced on every change.
table inet deyroute {
	set nodes {
		type ipv4_addr
		elements = { 1.2.3.4, 9.8.7.6 }
	}

	set nodes6 {
		type ipv6_addr
		elements = { 2001:db8::10, 2001:db8::20 }
	}

	chain input {
		type filter hook input priority -10; policy accept;
		ct state established,related accept
		iif "lo" accept
		tcp dport 44433 ip saddr @nodes accept
		tcp dport 44433 ip6 saddr @nodes6 accept
		tcp dport 44433 drop
		tcp dport 30000-31999 ip saddr @nodes accept
		udp dport 30000-31999 ip saddr @nodes accept
		tcp dport 30000-31999 ip6 saddr @nodes6 accept
		udp dport 30000-31999 ip6 saddr @nodes6 accept
		tcp dport 30000-31999 drop
		udp dport 30000-31999 drop
		tcp dport { 443, 2000-2010, 8443, 8444 } accept
		udp dport 27015 accept
	}
}
