internal/firewall/testdata/nft_comments.txt
table inet fw {
	map svc {
		type inet_service : verdict
		elements = { 8080 : accept, 8081 : drop, 8082 : jump web }
	}

	set allowed {
		type ipv4_addr . inet_service
		elements = { 10.0.0.1 . 9000 }
	}

	chain web {
		tcp dport 8082 accept comment "web chain"
	}

	chain input {
		type filter hook input priority filter; policy drop;
		ct state established,related accept comment "replies"
		tcp dport 443 counter packets 0 bytes 0 accept comment "https"
		tcp dport vmap @svc
		ip saddr . tcp dport @allowed accept
		ip daddr . tcp dport { 10.9.9.9 . 9100 } accept
		udp dport 53 accept comment "dns"
		tcp dport 22 jump web comment "ssh via web"
	}
}
