internal/firewall/testdata/nft_front.txt
table inet other {
	set world {
		type ipv4_addr
		flags interval
		elements = { 0.0.0.0/0 }
	}

	set cf4 {
		type ipv4_addr
		flags interval
		elements = { 173.245.48.0/20, 103.21.244.0/22,
			     103.22.200.0/22, 103.31.4.0/22,
			     104.16.0.0/13, 104.24.0.0/14,
			     172.64.0.0/13, 131.0.72.0/22 }
	}

	chain input {
		type filter hook input priority filter; policy drop;
		ct state established,related accept
		iif "lo" accept
		tcp dport 2053 ip saddr @world accept
		tcp dport 8443 ip saddr @cf4 accept
		tcp dport 8443 ip6 saddr @cf6 accept
	}
}
table inet deyroute {
	set nodes {
		type ipv4_addr
		elements = { 1.2.3.4, 9.8.7.6 }
	}

	set nodes6 {
		type ipv6_addr
	}

	set cf4 {
		type ipv4_addr
		flags interval
		elements = { 103.21.244.0/22, 103.22.200.0/22,
			     103.31.4.0/22, 104.16.0.0/13,
			     104.24.0.0/14, 108.162.192.0/18,
			     131.0.72.0/22, 141.101.64.0/18,
			     162.158.0.0/15, 172.64.0.0/13,
			     173.245.48.0/20, 188.114.96.0/20,
			     190.93.240.0/20, 197.234.240.0/22,
			     198.41.128.0/17 }
	}

	set cf6 {
		type ipv6_addr
		flags interval
		elements = { 2400:cb00::/32, 2405:8100::/32,
			     2405:b500::/32, 2606:4700::/32,
			     2803:f800::/32, 2a06:98c0::/29,
			     2c0f:f248::/32 }
	}

	chain input {
		type filter hook input priority -10; policy accept;
		ct state established,related accept
		iif "lo" accept
		tcp dport 44433 ip saddr @nodes accept
		tcp dport 44433 ip6 saddr @nodes6 accept
		tcp dport 44433 drop
		tcp dport 8443 ip saddr @cf4 accept
		tcp dport 8443 ip6 saddr @cf6 accept
		tcp dport 8443 drop
		tcp dport 443 accept
	}
}
